Countries and stuff

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -113,30 +113,55 @@
  BAM_radical_nationalism_ADJ:0 "Arabic "
  BAM_radical_nationalism_DEF:0 "The Greater Arabia"
  
- BNA_communism:0 "Union of North America"
+ BNA_communism:0 "British North America"
  BNA_communism_ADJ:0 "American "
- BNA_communism_DEF:0 "The Union of North America"
- BNA_radical_socialism:0 "Socialist States of America"
+ BNA_communism_DEF:0 "British North America"
+ BNA_radical_socialism:0 "British North America"
  BNA_radical_socialism_ADJ:0 "American "
- BNA_radical_socialism_DEF:0 "The Socialist States of America"
- BNA_social_democratic:0 "Republic of North America"
+ BNA_radical_socialism_DEF:0 "British North America"
+ BNA_social_democratic:0 "British North America"
  BNA_social_democratic_ADJ:0 "American "
- BNA_social_democratic_DEF:0 "Republic of North America"
- BNA_market_liberalism:0 "Republic of North America"
+ BNA_social_democratic_DEF:0 "British North America"
+ BNA_market_liberalism:0 "British North America"
  BNA_market_liberalism_ADJ:0 "American "
- BNA_market_liberalism_DEF:0 "The Republic of North America"
- BNA_social_conservatism:0 "Republic of North America"
+ BNA_market_liberalism_DEF:0 "British North America"
+ BNA_social_conservatism:0 "British North America"
  BNA_social_conservatism_ADJ:0 "American "
- BNA_social_conservatism_DEF:0 "The Republic of North America"
+ BNA_social_conservatism_DEF:0 "British North America"
  BNA_authoritarian_government:0 "British North America"
  BNA_authoritarian_government_ADJ:0 "British American "
- BNA_authoritarian_government_DEF:0 "The British North America"
- BNA_paternal_autocrat:0 "Republic of North America"
+ BNA_authoritarian_government_DEF:0 "British North America"
+ BNA_paternal_autocrat:0 "British North America"
  BNA_paternal_autocrat_ADJ:0 "American "
- BNA_paternal_autocrat_DEF:0 "The Republic of North America"
- BNA_radical_nationalism:0 "Independent America"
+ BNA_paternal_autocrat_DEF:0 "British North America"
+ BNA_radical_nationalism:0 "British North America"
  BNA_radical_nationalism_ADJ:0 "American "
- BNA_radical_nationalism_DEF:0 "The Independent America"
+ BNA_radical_nationalism_DEF:0 "British North America"
+  
+ BRI_communism:0 "British Ireland"
+ BRI_communism_ADJ:0 "Irish "
+ BRI_communism_DEF:0 "British Ireland"
+ BRI_radical_socialism:0 "British Ireland"
+ BRI_radical_socialism_ADJ:0 "Irish "
+ BRI_radical_socialism_DEF:0 "British Ireland"
+ BRI_social_democratic:0 "British Ireland"
+ BRI_social_democratic_ADJ:0 "Irish "
+ BRI_social_democratic_DEF:0 "British Ireland"
+ BRI_market_liberalism:0 "British Ireland"
+ BRI_market_liberalism_ADJ:0 "Irish "
+ BRI_market_liberalism_DEF:0 "British Ireland"
+ BRI_social_conservatism:0 "British Ireland"
+ BRI_social_conservatism_ADJ:0 "Irish "
+ BRI_social_conservatism_DEF:0 "British Ireland"
+ BRI_authoritarian_government:0 "British Ireland"
+ BRI_authoritarian_government_ADJ:0 "Irish "
+ BRI_authoritarian_government_DEF:0 "British Ireland"
+ BRI_paternal_autocrat:0 "British Ireland"
+ BRI_paternal_autocrat_ADJ:0 "Irish "
+ BRI_paternal_autocrat_DEF:0 "British Ireland"
+ BRI_radical_nationalism:0 "British Ireland"
+ BRI_radical_nationalism_ADJ:0 "Irish "
+ BRI_radical_nationalism_DEF:0 "British Ireland"
  
  CRO_communism:0 "Socialist Republic of Croatia"
  CRO_communism_ADJ:0 "Croatian "
@@ -287,7 +312,32 @@
  HUN_radical_nationalism:0 "Hungarian Nation"
  HUN_radical_nationalism_ADJ:0 "Hungarian "
  HUN_radical_nationalism_DEF:0 "The Hungarian Nation"
- 
+
+  
+ IRE_communism:0 "Irish People's Union"
+ IRE_communism_ADJ:0 "Irish "
+ IRE_communism_DEF:0 "The Irish People's Union"
+ IRE_radical_socialism:0 "Irish People's Union"
+ IRE_radical_socialism_ADJ:0 "Irish "
+ IRE_radical_socialism_DEF:0 "The Irish People's Union"
+ IRE_social_democratic:0 "Irish People's Union"
+ IRE_social_democratic_ADJ:0 "Irish "
+ IRE_social_democratic_DEF:0 "The Irish People's Union"
+ IRE_market_liberalism:0 "Republic of Ireland"
+ IRE_market_liberalism_ADJ:0 "Irish "
+ IRE_market_liberalism_DEF:0 "The Republic of Ireland"
+ IRE_social_conservatism:0 "Republic of Ireland"
+ IRE_social_conservatism_ADJ:0 "Irish "
+ IRE_social_conservatism_DEF:0 "The Republic of Ireland"
+ IRE_authoritarian_government:0 "Republic of Ireland"
+ IRE_authoritarian_government_ADJ:0 "Irish "
+ IRE_authoritarian_government_DEF:0 "The Republic of Ireland"
+ IRE_paternal_autocrat:0 "Republic of Ireland"
+ IRE_paternal_autocrat_ADJ:0 "Irish "
+ IRE_paternal_autocrat_DEF:0 "The Republic of Ireland"
+ IRE_radical_nationalism:0 "Nationalist Ireland"
+ IRE_radical_nationalism_ADJ:0 "Irish "
+ IRE_radical_nationalism_DEF:0 "Nationalist Ireland"
  
  ITA_communism:0 "Italian Socialist Republic"
  ITA_communism_ADJ:0 "Italian "
@@ -295,7 +345,7 @@
  ITA_radical_socialism:0 "Italian Socialist Republic"
  ITA_radical_socialism_ADJ:0 "Italian "
  ITA_radical_socialism_DEF:0 "The Italian Socialist Republic"
- ITA_social_democratic:0 "Italian Socialist Republicc"
+ ITA_social_democratic:0 "Italian Socialist Republic"
  ITA_social_democratic_ADJ:0 "Italian "
  ITA_social_democratic_DEF:0 "The Italian Socialist Republic"
  ITA_market_liberalism:0 "Italian Republic"
@@ -338,6 +388,31 @@
  MEX_radical_nationalism:0 "Empire of Mexico"
  MEX_radical_nationalism_ADJ:0 "Mexican "
  MEX_radical_nationalism_DEF:0 "The Empire of Mexico"
+
+ ROM_communism:0 "Romanian People's Republic"
+ ROM_communism_ADJ:0 "Romanian "
+ ROM_communism_DEF:0 "The Romanian People's Republic"
+ ROM_radical_socialism:0 "Socialist Republic of Romania"
+ ROM_radical_socialism_ADJ:0 "Romanian "
+ ROM_radical_socialism_DEF:0 "The Socialist Republic of Romania"
+ ROM_social_democratic:0 "Socialist Republic of Romania"
+ ROM_social_democratic_ADJ:0 "Romanian "
+ ROM_social_democratic_DEF:0 "The Socialist Republic of Romania"
+ ROM_market_liberalism:0 "Romania"
+ ROM_market_liberalism_ADJ:0 "Romanian "
+ ROM_market_liberalism_DEF:0 "Romania"
+ ROM_social_conservatism:0 "Romania"
+ ROM_social_conservatism_ADJ:0 "Romanian "
+ ROM_social_conservatism_DEF:0 "Romania"
+ ROM_authoritarian_government:0 "Romania"
+ ROM_authoritarian_government_ADJ:0 "Romanian "
+ ROM_authoritarian_government_DEF:0 "Romania"
+ ROM_paternal_autocrat:0 "Kingdom of Romania"
+ ROM_paternal_autocrat_ADJ:0 "Romanian "
+ ROM_paternal_autocrat_DEF:0 "The Kingdom of Romania"
+ ROM_radical_nationalism:0 "Iron Guard Romania"
+ ROM_radical_nationalism_ADJ:0 "Romanian "
+ ROM_radical_nationalism_DEF:0 "The Iron Guard Romania" 
  
  ROL_communism:0 "Union of Louisiana"
  ROL_communism_ADJ:0 "Louisianan "
@@ -388,6 +463,31 @@
  RUS_radical_nationalism:0 "Russian Empire"
  RUS_radical_nationalism_ADJ:0 "Russian "
  RUS_radical_nationalism_DEF:0 "The Russian Empire"
+
+ SAF_communism:0 "Cape Commune"
+ SAF_communism_ADJ:0 "South African "
+ SAF_communism_DEF:0 "The Cape Commune"
+ SAF_radical_socialism:0 "Cape Commune"
+ SAF_radical_socialism_ADJ:0 "South African "
+ SAF_radical_socialism_DEF:0 "The Cape Commune"
+ SAF_social_democratic:0 "Republic of South Africa"
+ SAF_social_democratic_ADJ:0 "South African "
+ SAF_social_democratic_DEF:0 "The Republic of South Africa"
+ SAF_market_liberalism:0 "Republic of South Africa"
+ SAF_market_liberalism_ADJ:0 "South African "
+ SAF_market_liberalism_DEF:0 "The Republic of South Africa"
+ SAF_social_conservatism:0 "Republic of South Africa"
+ SAF_social_conservatism_ADJ:0 "South African "
+ SAF_social_conservatism_DEF:0 "The Republic of South Africa"
+ SAF_authoritarian_government:0 "British South Africa"
+ SAF_authoritarian_government_ADJ:0 "South African "
+ SAF_authoritarian_government_DEF:0 "The British South Africa"
+ SAF_paternal_autocrat:0 "Republic of South Africa"
+ SAF_paternal_autocrat_ADJ:0 "South African "
+ SAF_paternal_autocrat_DEF:0 "The Republic of South Africa"
+ SAF_radical_nationalism:0 "Nationalist South Africa"
+ SAF_radical_nationalism_ADJ:0 "South African "
+ SAF_radical_nationalism_DEF:0 "The Nationalist South Africa"
  
  SER_communism:0 "Socialist Republic of Serbia"
  SER_communism_ADJ:0 "Serbian "
@@ -489,6 +589,30 @@
  UNI_radical_nationalism_ADJ:0 "Flemish "
  UNI_radical_nationalism_DEF:0 "The United Provinces" 
 
+ USA_communism:0 "Socialist States of North America"
+ USA_communism_ADJ:0 "American "
+ USA_communism_DEF:0 "The Socialist States of North America"
+ USA_radical_socialism:0 "Socialist States of North America"
+ USA_radical_socialism_ADJ:0 "American "
+ USA_radical_socialism_DEF:0 "The Socialist States of North America"
+ USA_social_democratic:0 "United States of America"
+ USA_social_democratic_ADJ:0 "American "
+ USA_social_democratic_DEF:0 "The United States of America"
+ USA_market_liberalism:0 "United States of America"
+ USA_market_liberalism_ADJ:0 "American "
+ USA_market_liberalism_DEF:0 "The United States of America"
+ USA_social_conservatism:0 "United States of America"
+ USA_social_conservatism_ADJ:0 "American "
+ USA_social_conservatism_DEF:0 "The United States of America"
+ USA_authoritarian_government:0 "United States of America"
+ USA_authoritarian_government_ADJ:0 "American "
+ USA_authoritarian_government_DEF:0 "The United States of America"
+ USA_paternal_autocrat:0 "United States of America"
+ USA_paternal_autocrat_ADJ:0 "American "
+ USA_paternal_autocrat_DEF:0 "The United States of America"
+ USA_radical_nationalism:0 "Independent North America"
+ USA_radical_nationalism_ADJ:0 "American "
+ USA_radical_nationalism_DEF:0 "The Independent North America" 
 
  SWE_fascism:0 "Svea Rike"
  SWE_fascism_DEF:0 "Svea Rike"
@@ -745,18 +869,7 @@
  FIN_democratic_ADJ:0 "Finnish"
  FIN_neutrality_ADJ:0 "Finnish"
  FIN_communism_ADJ:0 "Finnish"
- IRE_fascism:0 "Resurrectionist Ireland"
- IRE_fascism_DEF:0 "Resurrectionist Ireland"
- IRE_democratic:0 "Ireland"
- IRE_democratic_DEF:0 "Ireland"
- IRE_neutrality:0 "Free Ireland"
- IRE_neutrality_DEF:0 "Free Ireland"
- IRE_communism:0 "Irish People's Union"
- IRE_communism_DEF:0 "The Irish People's Union"
- IRE_fascism_ADJ:0 "Irish"
- IRE_democratic_ADJ:0 "Irish"
- IRE_neutrality_ADJ:0 "Irish"
- IRE_communism_ADJ:0 "Irish"
+
 
  AFG_fascism:0 "New Afghan Khanate"
  AFG_fascism_DEF:0 "The New Afghan Khanate"
@@ -1060,18 +1173,6 @@
  PRU_democratic_ADJ:0 "Peruvian"
  PRU_neutrality_ADJ:0 "Peruvian"
  PRU_communism_ADJ:0 "Peruvian"
- SAF_fascism:0 "Nationalist South Africa"
- SAF_fascism_DEF:0 "Nationalist South Africa"
- SAF_democratic:0 "South Africa"
- SAF_democratic_DEF:0 "South Africa"
- SAF_neutrality:0 "Unitary South Africa"
- SAF_neutrality_DEF:0 "Unitary South Africa"
- SAF_communism:0 "Cape Commune"
- SAF_communism_DEF:0 "The Cape Commune"
- SAF_fascism_ADJ:0 "South African"
- SAF_democratic_ADJ:0 "South African"
- SAF_neutrality_ADJ:0 "South African"
- SAF_communism_ADJ:0 "South African"
  SAU_fascism:0 "Arabic Empire"
  SAU_fascism_DEF:0 "The Arabic Empire"
  SAU_democratic:0 "Arabian Republic"
