--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -394,7 +394,78 @@
  HUN_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
  HUN_radical_nationalist_party:0 "RNP"
  HUN_radical_nationalist_party_long:0 "Radical Nationalist Party" 
+
+ #Romania
+ ROM_communism_party:0 "CP"
+ ROM_communism_party_long:0 "Communist Party"
+ ROM_radical_socialism_party:0 "RSP"
+ ROM_radical_socialism_party_long:0 "Radical Socialist Party"
+ ROM_social_democratic_party:0 "SDP"
+ ROM_social_democratic_party_long:0 "Social Democratic Party"
+ ROM_market_liberalism_party:0 "MLP"
+ ROM_market_liberalism_party_long:0 "Market Liberal Party"
+ ROM_social_conservatism_party:0 "SCP"
+ ROM_social_conservatism_party_long:0 "Social Conservative Party"
+ ROM_authoritarian_government_party:0 "CG"
+ ROM_authoritarian_government_party_long:0 "Colonial Government"
+ ROM_paternal_autocrat_party:0 "PAP"
+ ROM_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ ROM_radical_nationalist_party:0 "RNP"
+ ROM_radical_nationalist_party_long:0 "Radical Nationalist Party"  
  
+ #South Africa
+ SAF_communism_party:0 "CP"
+ SAF_communism_party_long:0 "Communist Party"
+ SAF_radical_socialism_party:0 "RSP"
+ SAF_radical_socialism_party_long:0 "Radical Socialist Party"
+ SAF_social_democratic_party:0 "SDP"
+ SAF_social_democratic_party_long:0 "Social Democratic Party"
+ SAF_market_liberalism_party:0 "MLP"
+ SAF_market_liberalism_party_long:0 "Market Liberal Party"
+ SAF_social_conservatism_party:0 "SCP"
+ SAF_social_conservatism_party_long:0 "Social Conservative Party"
+ SAF_authoritarian_government_party:0 "CG"
+ SAF_authoritarian_government_party_long:0 "Colonial Government"
+ SAF_paternal_autocrat_party:0 "PAP"
+ SAF_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ SAF_radical_nationalist_party:0 "RNP"
+ SAF_radical_nationalist_party_long:0 "Radical Nationalist Party" 
+ 
+ #British Ireland
+ BRI_communism_party:0 "CP"
+ BRI_communism_party_long:0 "Communist Party"
+ BRI_radical_socialism_party:0 "RSP"
+ BRI_radical_socialism_party_long:0 "Radical Socialist Party"
+ BRI_social_democratic_party:0 "SDP"
+ BRI_social_democratic_party_long:0 "Social Democratic Party"
+ BRI_market_liberalism_party:0 "MLP"
+ BRI_market_liberalism_party_long:0 "Market Liberal Party"
+ BRI_social_conservatism_party:0 "SCP"
+ BRI_social_conservatism_party_long:0 "Social Conservative Party"
+ BRI_authoritarian_government_party:0 "CG"
+ BRI_authoritarian_government_party_long:0 "Colonial Government"
+ BRI_paternal_autocrat_party:0 "PAP"
+ BRI_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ BRI_radical_nationalist_party:0 "RNP"
+ BRI_radical_nationalist_party_long:0 "Radical Nationalist Party" 
+ 
+ #United States of America
+ USA_communism_party:0 "CP"
+ USA_communism_party_long:0 "Communist Party"
+ USA_radical_socialism_party:0 "RSP"
+ USA_radical_socialism_party_long:0 "Radical Socialist Party"
+ USA_social_democratic_party:0 "SDP"
+ USA_social_democratic_party_long:0 "Social Democratic Party"
+ USA_market_liberalism_party:0 "MLP"
+ USA_market_liberalism_party_long:0 "Market Liberal Party"
+ USA_social_conservatism_party:0 "SCP"
+ USA_social_conservatism_party_long:0 "Social Conservative Party"
+ USA_authoritarian_government_party:0 "CG"
+ USA_authoritarian_government_party_long:0 "Colonial Government"
+ USA_paternal_autocrat_party:0 "PAP"
+ USA_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ USA_radical_nationalist_party:0 "RNP"
+ USA_radical_nationalist_party_long:0 "Radical Nationalist Party" 
  
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
@@ -402,10 +473,6 @@
  POL_democratic_party:0 "PSL"
  POL_democratic_party_long:0 "Polskie Stronnictwo Ludowe"
  POL_neutrality_party:0 "BBWR"
- USA_communism_party:0 "Communist Party USA"
- USA_democratic_party:0 "Democratic Party"
- USA_republican_party:0 "Republican Party"
- USA_fascism_party:0 "Silver Legion of America"
  
  
  CHI_communism_party:0 "CPC"
@@ -499,15 +566,6 @@
  TUR_neutrality_party:0 "CHP"
  TUR_neutrality_party_long:0 "Cumhuriyet Halk Partisi"
 
- ROM_neutrality_party:0 "FRN"
- ROM_neutrality_party_long:0 "Frontul Renasterii Nationale"
- ROM_communism_party:0 "PCR"
- ROM_communism_party_long:0 "Partidul Comunist Roman"
- ROM_democratic_party:0 "PNL"
- ROM_democratic_party_long:0 "Partidul National Liberal"
- ROM_fascism_party:0 "Garda de Fier"
- ROM_fascism_party_long:0 "Garda de Fier"
-
  BUL_neutrality_party:0 "Tsar Boris loyalists"
  BUL_communism_party:0 "BCP"
  BUL_communism_party_long:0 "Bulgarian Communist Party"
@@ -515,14 +573,7 @@
  BUL_democratic_party_long:0 "United People's Progressive Party"
  BUL_fascism_party:0 "UBNL"
  BUL_fascism_party_long:0 "The Union of Bulgarian National Legions"
- SAF_neutrality_party:0 "ANC"
- SAF_neutrality_party_long:0 "African National Congress"
- SAF_communism_party:0 "SACP"
- SAF_communism_party_long:0 "South African Communist Party"
- SAF_democratic_party:0 "United"
- SAF_democratic_party_long:0 "United National South African Party"
- SAF_fascism_party:0 "GNP"
- SAF_fascism_party_long:0 "Gesuiwerde Nasionale Party"
+ 
  NZL_neutrality_party:0 "National"
  NZL_neutrality_party_long:0 "New Zealand National Party"
  NZL_democratic_party:0 "Labour"
