--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -138,6 +138,31 @@
  BNA_radical_nationalism_ADJ:0 "American "
  BNA_radical_nationalism_DEF:0 "British North America"
   
+ BUL_communism:0 "Socialist Republic of Bulgaria"
+ BUL_communism_ADJ:0 "Bulgarian "
+ BUL_communism_DEF:0 "The Socialist Republic of Bulgaria"
+ BUL_radical_socialism:0 "Socialist Republic of Bulgaria"
+ BUL_radical_socialism_ADJ:0 "Bulgarian "
+ BUL_radical_socialism_DEF:0 "The Socialist Republic of Bulgaria"
+ BUL_social_democratic:0 "Socialist Republic of Bulgaria"
+ BUL_social_democratic_ADJ:0 "Bulgarian "
+ BUL_social_democratic_DEF:0 "The Socialist Republic of Bulgaria"
+ BUL_market_liberalism:0 "Republic of Bulgaria"
+ BUL_market_liberalism_ADJ:0 "Bulgarian "
+ BUL_market_liberalism_DEF:0 "Republic of Bulgaria"
+ BUL_social_conservatism:0 "Republic of Bulgaria"
+ BUL_social_conservatism_ADJ:0 "Bulgarian "
+ BUL_social_conservatism_DEF:0 "Republic of Bulgaria"
+ BUL_authoritarian_government:0 "Republic of Bulgaria"
+ BUL_authoritarian_government_ADJ:0 "Bulgarian "
+ BUL_authoritarian_government_DEF:0 "Republic of Bulgaria"
+ BUL_paternal_autocrat:0 "Kingdom of Bulgaria"
+ BUL_paternal_autocrat_ADJ:0 "Bulgarian "
+ BUL_paternal_autocrat_DEF:0 "The Kingdom of Bulgaria"
+ BUL_radical_nationalism:0 "Legionnaires Bulgaria"
+ BUL_radical_nationalism_ADJ:0 "Bulgarian "
+ BUL_radical_nationalism_DEF:0 "Legionnaires Bulgaria"
+  
  BRI_communism:0 "British Ireland"
  BRI_communism_ADJ:0 "Irish "
  BRI_communism_DEF:0 "British Ireland"
@@ -287,6 +312,31 @@
  GER_radical_nationalism:0 "German Reich"
  GER_radical_nationalism_ADJ:0 "German "
  GER_radical_nationalism_DEF:0 "The German Reich"
+  
+ GRE_communism:0 "Worker's Republic of Greece"
+ GRE_communism_ADJ:0 "Greek "
+ GRE_communism_DEF:0 "The Worker's Republic of Greece"
+ GRE_radical_socialism:0 "Worker's Republic of Greece"
+ GRE_radical_socialism_ADJ:0 "Greek "
+ GRE_radical_socialism_DEF:0 "The Worker's Republic of Greece"
+ GRE_social_democratic:0 "Worker's Republic of Greece"
+ GRE_social_democratic_ADJ:0 "Greek "
+ GRE_social_democratic_DEF:0 "The Worker's Republic of Greece"
+ GRE_market_liberalism:0 "Hellenic Republic"
+ GRE_market_liberalism_ADJ:0 "Greek "
+ GRE_market_liberalism_DEF:0 "The Hellenic Republic"
+ GRE_social_conservatism:0 "Hellenic Republic"
+ GRE_social_conservatism_ADJ:0 "Greek "
+ GRE_social_conservatism_DEF:0 "The Hellenic Republic"
+ GRE_authoritarian_government:0 "Hellenic Republic"
+ GRE_authoritarian_government_ADJ:0 "Greek "
+ GRE_authoritarian_government_DEF:0 "The Hellenic Republic"
+ GRE_paternal_autocrat:0 "Hellenic Republic"
+ GRE_paternal_autocrat_ADJ:0 "Greek "
+ GRE_paternal_autocrat_DEF:0 "The Hellenic Republic"
+ GRE_radical_nationalism:0 "National Union of Greece"
+ GRE_radical_nationalism_ADJ:0 "Greek "
+ GRE_radical_nationalism_DEF:0 "The National Union of Greece"
  
  HUN_communism:0 "Republic of Councils in Hungary"
  HUN_communism_ADJ:0 "Hungarian "
@@ -713,42 +763,6 @@
  LAT_democratic_ADJ:0 "Latvian"
  LAT_neutrality_ADJ:0 "Latvian"
  LAT_communism_ADJ:0 "Latvian"
- SPR_fascism:0 "Nationalist Spain"
- SPR_fascism_DEF:0 "Nationalist Spain"
- SPR_democratic:0 "Spain"
- SPR_democratic_DEF:0 "Spain"
- SPR_neutrality:0 "Spanish Empire"
- SPR_neutrality_DEF:0 "The Spanish Empire"
- SPR_communism:0 "Republican Spain"
- SPR_communism_DEF:0 "Republican Spain"
- SPR_fascism_ADJ:0 "Spanish"
- SPR_democratic_ADJ:0 "Spanish"
- SPR_neutrality_ADJ:0 "Spanish"
- SPR_communism_ADJ:0 "Spanish"
- ITA_fascism:0 "Italy"
- ITA_fascism_DEF:0 "Italy"
- ITA_democratic:0 "Republican Italy"
- ITA_democratic_DEF:0 "Republican Italy"
- ITA_neutrality:0 "Kingdom of Italy"
- ITA_neutrality_DEF:0 "The Kingdom of Italy"
- ITA_communism:0 "Italian Union"
- ITA_communism_DEF:0 "The Italian Union"
- ITA_fascism_ADJ:0 "Italian"
- ITA_democratic_ADJ:0 "Italian"
- ITA_neutrality_ADJ:0 "Italian"
- ITA_communism_ADJ:0 "Italian"
- ROM_fascism:0 "Legionary Romania"
- ROM_fascism_DEF:0 "Legionary Romania"
- ROM_democratic:0 "Romania"
- ROM_democratic_DEF:0 "Romania"
- ROM_neutrality:0 "Kingdom of Romania"
- ROM_neutrality_DEF:0 "The Kingdom of Romania"
- ROM_communism:0 "Romanian People's Republic"
- ROM_communism_DEF:0 "The Romanian People's Republic"
- ROM_fascism_ADJ:0 "Romanian"
- ROM_democratic_ADJ:0 "Romanian"
- ROM_neutrality_ADJ:0 "Romanian"
- ROM_communism_ADJ:0 "Romanian"
  YUG_fascism:0 "Radikalna Yugoslavia"
  YUG_fascism_DEF:0 "Radikalna Yugoslavia"
  YUG_democratic:0 "Yugoslavian Confederation"
@@ -785,18 +799,6 @@
  TUR_democratic_ADJ:0 "Turkish"
  TUR_neutrality_ADJ:0 "Turkish"
  TUR_communism_ADJ:0 "Turkish"
- GRE_fascism:0 "National Union of Greece"
- GRE_fascism_DEF:0 "The National Union of Greece"
- GRE_democratic:0 "Hellenic Republic"
- GRE_democratic_DEF:0 "The Hellenic Republic"
- GRE_neutrality:0 "Greece"
- GRE_neutrality_DEF:0 "Greece"
- GRE_communism:0 "Provisional Democratic Greece"
- GRE_communism_DEF:0 "Provisional Democratic Greece"
- GRE_fascism_ADJ:0 "Greek"
- GRE_democratic_ADJ:0 "Greek"
- GRE_neutrality_ADJ:0 "Greek"
- GRE_communism_ADJ:0 "Greek"
  ALB_fascism:0 "Greater Albania"
  ALB_fascism_DEF:0 "Greater Albania"
  ALB_democratic:0 "Republic of Albania"
@@ -833,18 +835,7 @@
  DEN_democratic_ADJ:0 "Danish"
  DEN_neutrality_ADJ:0 "Danish"
  DEN_communism_ADJ:0 "Danish"
- BUL_fascism:0 "Legionnaires Bulgaria"
- BUL_fascism_DEF:0 "Legionnaires Bulgaria"
- BUL_democratic:0 "Republic of Bulgaria"
- BUL_democratic_DEF:0 "The Republic of Bulgaria"
- BUL_neutrality:0 "Bulgaria"
- BUL_neutrality_DEF:0 "Bulgaria"
- BUL_communism:0 "Socialist Republic of Bulgaria"
- BUL_communism_DEF:0 "The Socialist Republic of Bulgaria"
- BUL_fascism_ADJ:0 "Bulgarian"
- BUL_democratic_ADJ:0 "Bulgarian"
- BUL_neutrality_ADJ:0 "Bulgarian"
- BUL_communism_ADJ:0 "Bulgarian"
+
  POR_fascism:0 "Greater Portugal"
  POR_fascism_DEF:0 "Greater Portugal"
  POR_democratic:0 "Portuguese Republic"
