--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -467,14 +467,60 @@
  USA_radical_nationalist_party:0 "RNP"
  USA_radical_nationalist_party_long:0 "Radical Nationalist Party" 
  
- POL_fascism_party:0 "ONR-Falanga"
- POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
- POL_communism_party:0 "Polish Socialist Party"
- POL_democratic_party:0 "PSL"
- POL_democratic_party_long:0 "Polskie Stronnictwo Ludowe"
- POL_neutrality_party:0 "BBWR"
+ #Bulgaria
+ BUL_communism_party:0 "CP"
+ BUL_communism_party_long:0 "Communist Party"
+ BUL_radical_socialism_party:0 "RSP"
+ BUL_radical_socialism_party_long:0 "Radical Socialist Party"
+ BUL_social_democratic_party:0 "SDP"
+ BUL_social_democratic_party_long:0 "Social Democratic Party"
+ BUL_market_liberalism_party:0 "MLP"
+ BUL_market_liberalism_party_long:0 "Market Liberal Party"
+ BUL_social_conservatism_party:0 "SCP"
+ BUL_social_conservatism_party_long:0 "Social Conservative Party"
+ BUL_authoritarian_government_party:0 "CG"
+ BUL_authoritarian_government_party_long:0 "Colonial Government"
+ BUL_paternal_autocrat_party:0 "PAP"
+ BUL_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ BUL_radical_nationalist_party:0 "RNP"
+ BUL_radical_nationalist_party_long:0 "Radical Nationalist Party" 
  
+ #Greece
+ GRE_communism_party:0 "CP"
+ GRE_communism_party_long:0 "Communist Party"
+ GRE_radical_socialism_party:0 "RSP"
+ GRE_radical_socialism_party_long:0 "Radical Socialist Party"
+ GRE_social_democratic_party:0 "SDP"
+ GRE_social_democratic_party_long:0 "Social Democratic Party"
+ GRE_market_liberalism_party:0 "MLP"
+ GRE_market_liberalism_party_long:0 "Market Liberal Party"
+ GRE_social_conservatism_party:0 "SCP"
+ GRE_social_conservatism_party_long:0 "Social Conservative Party"
+ GRE_authoritarian_government_party:0 "CG"
+ GRE_authoritarian_government_party_long:0 "Colonial Government"
+ GRE_paternal_autocrat_party:0 "PAP"
+ GRE_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ GRE_radical_nationalist_party:0 "RNP"
+ GRE_radical_nationalist_party_long:0 "Radical Nationalist Party" 
  
+ #Poland
+ POL_communism_party:0 "CP"
+ POL_communism_party_long:0 "Communist Party"
+ POL_radical_socialism_party:0 "RSP"
+ POL_radical_socialism_party_long:0 "Radical Socialist Party"
+ POL_social_democratic_party:0 "SDP"
+ POL_social_democratic_party_long:0 "Social Democratic Party"
+ POL_market_liberalism_party:0 "MLP"
+ POL_market_liberalism_party_long:0 "Market Liberal Party"
+ POL_social_conservatism_party:0 "SCP"
+ POL_social_conservatism_party_long:0 "Social Conservative Party"
+ POL_authoritarian_government_party:0 "CG"
+ POL_authoritarian_government_party_long:0 "Colonial Government"
+ POL_paternal_autocrat_party:0 "PAP"
+ POL_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ POL_radical_nationalist_party:0 "RNP"
+ POL_radical_nationalist_party_long:0 "Radical Nationalist Party" 
+  
  CHI_communism_party:0 "CPC"
  CHI_communism_party_long:0 "Communist Party of China"
  CHI_democratic_party:0 "China Democratic League"
@@ -489,13 +535,6 @@
  POR_democratic_party_long:0 "Partido Democrático"
  POR_fascism_party:0 "MNS"
  POR_fascism_party_long:0 "Movimento Nacional-Sindicalista"
- GRE_neutrality_party:0 "Metaxá"
- GRE_neutrality_party_long:0 "Kathestós Metaxá"
- GRE_communism_party:0 "KKE"
- GRE_communism_party_long:0 "Kommounistikó Kómma Elládas"
- GRE_democratic_party:0 "Laïkòn Kómma"
- GRE_fascism_party:0 "EEE"
- GRE_fascism_party_long:0 "Ethniki Enosis Ellados"
  LIT_neutrality_party:0 "LTS"
  LIT_neutrality_party_long:0 "Lietuviu Tautininku Sajunga"
  LIT_fascism_party:0 "Geležinis Vilkas"
@@ -566,13 +605,6 @@
  TUR_neutrality_party:0 "CHP"
  TUR_neutrality_party_long:0 "Cumhuriyet Halk Partisi"
 
- BUL_neutrality_party:0 "Tsar Boris loyalists"
- BUL_communism_party:0 "BCP"
- BUL_communism_party_long:0 "Bulgarian Communist Party"
- BUL_democratic_party:0 "UPPP"
- BUL_democratic_party_long:0 "United People's Progressive Party"
- BUL_fascism_party:0 "UBNL"
- BUL_fascism_party_long:0 "The Union of Bulgarian National Legions"
  
  NZL_neutrality_party:0 "National"
  NZL_neutrality_party_long:0 "New Zealand National Party"
