--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -414,6 +414,31 @@
  ITA_radical_nationalism_ADJ:0 "Italian "
  ITA_radical_nationalism_DEF:0 "The Kingdom of Italy"
  
+ MAL_communism:0 "Malaysian Socialist Republic"
+ MAL_communism_ADJ:0 "Malaysian "
+ MAL_communism_DEF:0 "The Malaysian Socialist Republic"
+ MAL_radical_socialism:0 "Malaysian Socialist Republic"
+ MAL_radical_socialism_ADJ:0 "Malaysian "
+ MAL_radical_socialism_DEF:0 "The Malaysian Socialist Republic"
+ MAL_social_democratic:0 "Republic of Malaysia"
+ MAL_social_democratic_ADJ:0 "Malaysian "
+ MAL_social_democratic_DEF:0 "The Republic of Malaysia"
+ MAL_market_liberalism:0 "Republic of Malaysia"
+ MAL_market_liberalism_ADJ:0 "Malaysian "
+ MAL_market_liberalism_DEF:0 "The Republic of Malaysia"
+ MAL_social_conservatism:0 "Republic of Malaysia"
+ MAL_social_conservatism_ADJ:0 "Malaysian "
+ MAL_social_conservatism_DEF:0 "The Republic of Malaysia"
+ MAL_authoritarian_government:0 "British Malaysia"
+ MAL_authoritarian_government_ADJ:0 "British-Malaysian "
+ MAL_authoritarian_government_DEF:0 "British Malaysia"
+ MAL_paternal_autocrat:0 "Republic of Malaysia"
+ MAL_paternal_autocrat_ADJ:0 "Malaysian "
+ MAL_paternal_autocrat_DEF:0 "The Republic of Malaysia"
+ MAL_radical_nationalism:0 "Republic of Malaysia"
+ MAL_radical_nationalism_ADJ:0 "Malaysian "
+ MAL_radical_nationalism_DEF:0 "The Republic of Malaysia"
+ 
  MEX_communism:0 "United Mexican States"
  MEX_communism_ADJ:0 "Mexican "
  MEX_communism_DEF:0 "The United Mexican States"
@@ -1620,18 +1645,7 @@
  INS_democratic_ADJ:0 "Indonesian"
  INS_neutrality_ADJ:0 "Indonesian"
  INS_communism_ADJ:0 "Indonesian"
- MAL_fascism:0 "Malaysia"
- MAL_fascism_DEF:0 "Malaysia"
- MAL_democratic:0 "Republic of Malaysia"
- MAL_democratic_DEF:0 "The Republic of Malaysia"
- MAL_neutrality:0 "Republic of Malaysia"
- MAL_neutrality_DEF:0 "The Republic of Malaysia"
- MAL_communism:0 "Malay People's Republic"
- MAL_communism_DEF:0 "The Malay People's Republic"
- MAL_fascism_ADJ:0 "Malaysian"
- MAL_democratic_ADJ:0 "Malaysian"
- MAL_neutrality_ADJ:0 "Malaysian"
- MAL_communism_ADJ:0 "Malaysian"
+
  LAO_fascism:0 "Unitary Laos"
  LAO_fascism_DEF:0 "Unitary Laos"
  LAO_democratic:0 "Republic of Laos"
