--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -24,45 +24,32 @@
  AST_radical_nationalism:0 "Independent Australia"
  AST_radical_nationalism_ADJ:0 "Australian "
  AST_radical_nationalism_DEF:0 "The Independent Australia" 
- 
- AUS_fascism:0 "Deutschsozialen Austria"
- AUS_fascism_DEF:0 "Deutschsozialen Austria"
- AUS_neutrality:0 "Austria"
- AUS_neutrality_DEF:0 "Austria"
- AUS_democratic:0 "Republic of Austria"
- AUS_democratic_DEF:0 "The Republic of Austria"
- AUS_communism:0 "Austrian Soviet Republic"
- AUS_communism_DEF:0 "The Austrian Soviet Republic"
- AUS_fascism_ADJ:0 "Austrian"
- AUS_neutrality_ADJ:0 "Austrian"
- AUS_democratic_ADJ:0 "Austrian"
- AUS_communism_ADJ:0 "Austrian"
- 
- AST_communism:0 "People's Republic of Austria"
- AST_communism_ADJ:0 "Austrian "
- AST_communism_DEF:0 "The People's Republic of Austria"
- AST_radical_socialism:0 "People's Republic of Austria"
- AST_radical_socialism_ADJ:0 "Austrian "
- AST_radical_socialism_DEF:0 "The People's Republic of Austria"
- AST_social_democratic:0 "Republic of Austria"
- AST_social_democratic_ADJ:0 "Austrian "
- AST_social_democratic_DEF:0 "The Republic of Austria"
- AST_market_liberalism:0 "Republic of Austria"
- AST_market_liberalism_ADJ:0 "Austrian "
- AST_market_liberalism_DEF:0 "The Republic of Austria"
- AST_social_conservatism:0 "Republic of Austria"
- AST_social_conservatism_ADJ:0 "Austrian "
- AST_social_conservatism_DEF:0 "The Republic of Austria"
- AST_authoritarian_government:0 "Republic of Austria"
- AST_authoritarian_government_ADJ:0 "Austrian "
- AST_authoritarian_government_DEF:0 "The Republic of Austria"
- AST_paternal_autocrat:0 "Kingdom of Austria"
- AST_paternal_autocrat_ADJ:0 "Austrian "
- AST_paternal_autocrat_DEF:0 "The Kingdom of Austria"
- AST_radical_nationalism:0 "Austrian Reich"
- AST_radical_nationalism_ADJ:0 "Austrian "
- AST_radical_nationalism_DEF:0 "The Austrian Reich" 
- 
+  
+ AUS_communism:0 "People's Republic of Austria"
+ AUS_communism_ADJ:0 "Austrian "
+ AUS_communism_DEF:0 "The People's Republic of Austria"
+ AUS_radical_socialism:0 "People's Republic of Austria"
+ AUS_radical_socialism_ADJ:0 "Austrian "
+ AUS_radical_socialism_DEF:0 "The People's Republic of Austria"
+ AUS_social_democratic:0 "Republic of Austria"
+ AUS_social_democratic_ADJ:0 "Austrian "
+ AUS_social_democratic_DEF:0 "The Republic of Austria"
+ AUS_market_liberalism:0 "Republic of Austria"
+ AUS_market_liberalism_ADJ:0 "Austrian "
+ AUS_market_liberalism_DEF:0 "The Republic of Austria"
+ AUS_social_conservatism:0 "Republic of Austria"
+ AUS_social_conservatism_ADJ:0 "Austrian "
+ AUS_social_conservatism_DEF:0 "The Republic of Austria"
+ AUS_authoritarian_government:0 "Republic of Austria"
+ AUS_authoritarian_government_ADJ:0 "Austrian "
+ AUS_authoritarian_government_DEF:0 "The Republic of Austria"
+ AUS_paternal_autocrat:0 "Kingdom of Austria"
+ AUS_paternal_autocrat_ADJ:0 "Austrian "
+ AUS_paternal_autocrat_DEF:0 "The Kingdom of Austria"
+ AUS_radical_nationalism:0 "Austrian Reich"
+ AUS_radical_nationalism_ADJ:0 "Austrian "
+ AUS_radical_nationalism_DEF:0 "The Austrian Reich" 
+
  BAL_communism:0 "United Baltic States"
  BAL_communism_ADJ:0 "Baltic "
  BAL_communism_DEF:0 "The United Baltic States"
@@ -414,6 +401,31 @@
  ITA_radical_nationalism_ADJ:0 "Italian "
  ITA_radical_nationalism_DEF:0 "The Kingdom of Italy"
  
+ ITA_communism:0 "Japanese People's Republic"
+ ITA_communism_ADJ:0 "Japanese "
+ ITA_communism_DEF:0 "The Japanese People's Republic"
+ ITA_radical_socialism:0 "Japanese People's Republic"
+ ITA_radical_socialism_ADJ:0 "Japanese "
+ ITA_radical_socialism_DEF:0 "The Japanese People's Republic"
+ ITA_social_democratic:0 "State of Japan"
+ ITA_social_democratic_ADJ:0 "Japanese "
+ ITA_social_democratic_DEF:0 "The State of Japan"
+ ITA_market_liberalism:0 "State of Japan"
+ ITA_market_liberalism_ADJ:0 "Japanese "
+ ITA_market_liberalism_DEF:0 "The State of Japan"
+ ITA_social_conservatism:0 "State of Japan"
+ ITA_social_conservatism_ADJ:0 "Japanese "
+ ITA_social_conservatism_DEF:0 "The State of Japan"
+ ITA_authoritarian_government:0 "Imperial Japan"
+ ITA_authoritarian_government_ADJ:0 "Japanese "
+ ITA_authoritarian_government_DEF:0 "Imperial Japan"
+ ITA_paternal_autocrat:0 "Imperial Japan"
+ ITA_paternal_autocrat_ADJ:0 "Japanese "
+ ITA_paternal_autocrat_DEF:0 "Imperial Japan"
+ ITA_radical_nationalism:0 "Imperial Japan"
+ ITA_radical_nationalism_ADJ:0 "Japanese "
+ ITA_radical_nationalism_DEF:0 "Imperial Japan"
+ 
  MAL_communism:0 "Malaysian Socialist Republic"
  MAL_communism_ADJ:0 "Malaysian "
  MAL_communism_DEF:0 "The Malaysian Socialist Republic"
@@ -638,7 +650,32 @@
  SPR_radical_nationalism:0 "Spanish Empire"
  SPR_radical_nationalism_ADJ:0 "Spanish "
  SPR_radical_nationalism_DEF:0 "The Spanish Empire"
-
+ 
+ POL_communism:0 "Polish People's Republic"
+ POL_communism_ADJ:0 "Polish" "
+ POL_communism_DEF:0 "The Polish People's Republic"
+ POL_radical_socialism:0 "Polish People's Republic"
+ POL_radical_socialism_ADJ:0 "Polish" "
+ POL_radical_socialism_DEF:0 "The Polish People's Republic"
+ POL_social_democratic:0 "Polish Republic"
+ POL_social_democratic_ADJ:0 "Polish" "
+ POL_social_democratic_DEF:0 "The Polish Republic"
+ POL_market_liberalism:0 "Polish Republic"
+ POL_market_liberalism_ADJ:0 "Polish" "
+ POL_market_liberalism_DEF:0 "The Polish Republic"
+ POL_social_conservatism:0 "Polish Republic"
+ POL_social_conservatism_ADJ:0 "Polish" "
+ POL_social_conservatism_DEF:0 "The Polish Republic"
+ POL_authoritarian_government:0 "Polish Republic"
+ POL_authoritarian_government_ADJ:0 "Polish" "
+ POL_authoritarian_government_DEF:0 "The Polish Republic"
+ POL_paternal_autocrat:0 "Polish Republic"
+ POL_paternal_autocrat_ADJ:0 "Polish" "
+ POL_paternal_autocrat_DEF:0 "The Polish Republic"
+ POL_radical_nationalism:0 "Falangist Poland"
+ POL_radical_nationalism_ADJ:0 "Polish" "
+ POL_radical_nationalism_DEF:0 "Falangist Poland"
+ 
  UNI_communism:0 "United Socialist Provinces"
  UNI_communism_ADJ:0 "Flemish "
  UNI_communism_DEF:0 "The United Socialist Provinces"
@@ -688,7 +725,7 @@
  USA_radical_nationalism:0 "Independent North America"
  USA_radical_nationalism_ADJ:0 "American "
  USA_radical_nationalism_DEF:0 "The Independent North America" 
-
+ 
  SWE_fascism:0 "Svea Rike"
  SWE_fascism_DEF:0 "Svea Rike"
  SWE_democratic:0 "Sweden"
@@ -739,18 +776,6 @@
  HOL_neutrality_ADJ:0 "Dutch"
  HOL_communism_ADJ:0 "Dutch"
 
- POL_fascism:0 "Falangist Poland"
- POL_fascism_DEF:0 "Falangist Poland"
- POL_democratic:0 "Polish Republic"
- POL_democratic_DEF:0 "The Polish Republic"
- POL_communism:0 "Polish People's Republic"
- POL_communism_DEF:0 "The Polish People's Republic"
- POL_neutrality:0 "Poland"
- POL_neutrality_DEF:0 "Poland"
- POL_fascism_ADJ:0 "Polish"
- POL_democratic_ADJ:0 "Polish"
- POL_communism_ADJ:0 "Polish"
- POL_neutrality_ADJ:0 "Polish"
 
  LIT_fascism:0 "Iron Wolf Lithuania"
  LIT_fascism_DEF:0 "Iron Wolf Lithuania"
@@ -1067,32 +1092,8 @@
  IRQ_democratic_ADJ:0 "Iraqi"
  IRQ_neutrality_ADJ:0 "Iraqi"
  IRQ_communism_ADJ:0 "Iraqi"
- JAP_authoritarian_government:0 "Imperial Japan"
- JAP_authoritarian_government_DEF:0 "Imperial Japan" 
- JAP_fascism:0 "Japan"
- JAP_fascism_DEF:0 "Japan"
- JAP_democratic:0 "State of Japan"
- JAP_democratic_DEF:0 "The State of Japan"
- JAP_neutrality:0 "Japanese Shogunate"
- JAP_neutrality_DEF:0 "The Japanese Shogunate"
- JAP_communism:0 "Japanese People's Republic"
- JAP_communism_DEF:0 "The Japanese People's Republic"
- JAP_fascism_ADJ:0 "Japanese"
- JAP_democratic_ADJ:0 "Japanese"
- JAP_neutrality_ADJ:0 "Japanese"
- JAP_communism_ADJ:0 "Japanese"
- MEX_fascism:0 "Synarchist Mexico"
- MEX_fascism_DEF:0 "Synarchist Mexico"
- MEX_democratic:0 "Mexican Opposition"
- MEX_democratic_DEF:0 "The Mexican Opposition"
- MEX_neutrality:0 "Mexico"
- MEX_neutrality_DEF:0 "Mexico"
- MEX_communism:0 "Mexican Socialist Republic"
- MEX_communism_DEF:0 "The Mexican Socialist Republic"
- MEX_fascism_ADJ:0 "Mexican"
- MEX_democratic_ADJ:0 "Mexican"
- MEX_neutrality_ADJ:0 "Mexican"
- MEX_communism_ADJ:0 "Mexican"
+
+
  MON_fascism:0 "New Mongol Empire"
  MON_fascism_DEF:0 "The New Mongol Empire"
  MON_democratic:0 "Mongolian Parliamentary Republic"
